Estructurado en base de w3.css y arreglado de errores de estructura
estilo-gen.css
+ Se cambio el overflow de las tabla_gen a auto, esto evitara que los valores se salgan

index.php
+ Se cambiaron todas las clases <<bloque b2>> y <<bloque b1>> por unas responsivas de w3.css
+ Se  cambiaron los titulos de los articulos de una cabecera por una estructura mas responsiva

--- a/css/estilo-gen.css
+++ b/css/estilo-gen.css
@@ -63,7 +63,7 @@
 				display:table;
 				width:100%;
 				font-size:12pt;
-				overflow:hidden;
+				overflow:auto;
 				text-align:left;
 				border-spacing:7px;
 			}
