Arreglando partes de codigo
- Habian estilos viejos
- Habian columnas html con estilos incorrectos de w3-col
- Pequeños errores en cuanto a estructura

+ Se agrego una funcion para automatizar la imagen del boton de mnu
+ Se agrego funcion para la correcta recepcion de los datos principales de elas informaciones que se pasan por el metodo GET
+ Se agrego un navegador de informaciones omnipresencial que gestionara los bloques <<.movible>>
+ Se agrego seccion donde se le explica al usuario que son las informaciones
+ Se agregaron las funciones para los botones siguiente y anterior
+ Se agrego la funcion rondaObj que determina en que <<.movible>> se encuentra
	* Este esta aun en desarrollo

--- a/css/estilo-mi_info.css
+++ b/css/estilo-mi_info.css
@@ -1,14 +1,4 @@
-#quickCarrot articles.bloques_infos{
-	padding:1.4cm;
-	display:block;
-	float:none;
-	overflow:hidden;
-}
-#quickCarrot articles.bloques_infos section.titulo{
-	width:25%;
-	display:inline-block;
-}
-#quickCarrot articles.bloques_infos section.contenido{
-	width:65%;
-	display:inline-block;
+#quickCarrot div.navegador_omni{
+	position: fixed;
+	top:0;
 }
