Arreglado del sistema de diagnosticos
estilo-gen.css
+ Se añadio un mejor estilo para los inputs y textareas de los <<div>> con clase <<tabla_gen>>

borrar.php
+ Se agrego la funcion <<session_start>>
+ Se agrego el <<case>> para diagnosticos, en este se borra un determinado diagnostico

editar.php
+ Se agrego el <<case>> para diagnosticos, aqui se puede editar el campo <d_resuelto>> en el cual su valor cambia a 1, es decir, el problema fue resuelto

guardar.php
+ Se agrego el <<case>> para diagnosticos, en este se podran guardar los diagnosticos hechos por el usuario
	* Aun no se puede enviar al correo

index.php
+ Se modifico la estructuras de los elementos de formulario de la seccion de diagnostico de errores
+ Se agrego el bloque <<Mis diagnosticos>>, en este se recopilan todos los diagnosticos hechos
	* Se pueden borrar
	* Se pueden marcar como resueltos
+ Se agrego un bloque explicativo donde se indica como utilizar los diagnosticos

func-ope.js
+ Se agrego un <<case>> para diagnosticos en la seccion de actualizacion y partes que se actualizaron
+ Se agrego la funcion <<boton_borrar_diag>> la cual permite gestionar el borrado de un diagnostico
+ Seagrego la funcion <<boton_listo_diag>> que permite marcar como reusleot un diagnostico
+ Se agrego una funcion para guardar los diagnosticos

* Se borraron archivos innecesarios en la carpeta <<partes_act>>

--- a/css/estilo-gen.css
+++ b/css/estilo-gen.css
@@ -75,6 +75,7 @@
 				border:1px solid #ccc;
 				max-width:4cm;
 				background:none;
+				width:100%;
 			}
 			#quickCarrot div.tabla_gen textarea{
 				padding:.7cm;
@@ -82,6 +83,7 @@
 				height:5cm;
 				font-size:10pt;
 				background:none;
+				width:100%;
 			}
 			#quickCarrot div.tabla_gen input[type="file"]{
 				display:none;
